--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,17 @@ before_install:
 script:
   - docker run -e CI=true kstyle0710/docker-react npm run test -- --coverage
 
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-2'
+  app: 'docker-react'
+  env: 'DockerReact-env'
+  bucket_name: 'elasticbeanstalk-us-east-2-068547093364'
+  bucket-path: 'docker-react'
+  on:
+    branch:master
+access_key_id: $aws_access_keygi
+secret_access_key: $aws_secret_key
+
 after_success:
   - echo "Test Success"
