--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ deploy:
   bucket-path: 'docker-react'
   on:
     branch:master
-access_key_id: $aws_access_keygi
+access_key_id: $aws_access_key
 secret_access_key: $aws_secret_key
 
 after_success:
