--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
 
 deploy:
   provider: elasticbeanstalk
+  edge: true
   region: 'us-east-2'
   app: 'docker-react'
   env: 'DockerReact-env'
