--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ deploy:
     branch: master
 access_key_id: $aws_access_key
 secret_access_key: $aws_secret_key
+bucket: 'S3 Bucket'
+skip_cleanup: true
 
 after_success:
   - echo "Test Success"
