--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ deploy:
   bucket-path: 'docker-react'
   on:
     branch: master
-access_key_id: $aws_access_key
-secret_access_key: $aws_secret_key
-bucket: 'S3 Bucket'
-skip_cleanup: true
+access_key_id: 
+  secure: $aws_access_key
+secret_access_key:
+  secure: $aws_secret_key
 
 after_success:
   - echo "Test Success"
