--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  edge: true
   region: 'us-east-2'
   app: 'docker-react'
   env: 'DockerReact-env'
@@ -22,10 +21,8 @@ deploy:
   bucket-path: 'docker-react'
   on:
     branch: master
-access_key_id: 
-  secure: $aws_access_key
-secret_access_key:
-  secure: $aws_secret_key
+  access_key_id: $aws_access_key
+  secret_access_key: $aws_secret_key
 
 after_success:
   - echo "Test Success"
